--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
+.thumbnails a {
+  margin: 20px;
+}
+.thumbnails {
+  width: 60%;
+  margin: auto;
+  margin-top:5%;
+}
 #overlay {
     display: none;
     position: absolute;
@@ -18,8 +26,7 @@
     top: 5%;
     left: 25%;
     padding: 16px;
-    border: 5px solid gray;
-    background-color: white;
+    background-color: transparent;
     z-index:1002;
     overflow: hidden;
 }
